# CryptoHunter

./: .env.example  .gitignore  BinanceTest.py  Dockerfile  LSTMPrediction.py  README.md  RandomForestRegression.py  Transformer.py  analyzed_news.csv  deepseektest.py  docker-compose.yaml  geminiWork.py  geminitest.py  manage.py  pyproject.toml  scrape_news  scrape_news.sh
CryptoHunter/: celery.py  settings.py  urls.py
DeepSeekNewsAnalysis/: scrapy.cfg
DeepSeekNewsAnalysis/DeepSeekNewsAnalysis/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
Model/: LSTM.py
NewsScrapper/NewsScrapper/: items.py  middlewares.py  pipelines.py  utils.py
TransformerModel/: BTCPriceForecaster.py
api/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
api/migrations/: 0004_alter_history_real.py
controllers/: run_controller.py
data_prep/: adding_indicators.py  catboostestt.py  scoreMissedValues.py  xg_boost_model.py  xgboost_model.pkl
datasets/: BTC_ready.csv  analyzed_news_for_work.csv  deepseektest.py  formatted_data.csv
front/: index.html
front/css/: styles.css
front/js/: script.js
java/: Dockerfile  pom.xml
model_training/: Transformer.py  dataset_autoupdate.py  retrained.py  run_controller.py  test.py  transformer_train.py
models/: transformer_model.pth
predictions_server/: Dockerfile  pyproject.toml
predictions_server/CryptoHunter/: asgi.py  settings.py  wsgi.py
predictions_server/NewsScrapper/: pipelines.py  settings.py
predictions_server/NewsScrapper/spiders/: news.py
predictions_server/api/: models.py  tasks.py  views.py
predictions_server/api/migrations/: 0001_initial.py  0002_rename_signals_signal.py  0003_history.py
predictions_server/datasets/: BTC_ready.csv
predictions_server/model_training/: dataset_autoupdate.py
predictions_server/models/: transformer_model.pth
sentiment_analyze/: geminiWork.py
(+19 files in other folders)
